writing equations in jupyter

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -10,11 +10,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2d8284b",
+   "id": "dfedc6bc",
    "metadata": {},
    "source": [
     "\\begin{gather*}\n",
     "x=y + z\\\\\n",
+    "\\end{gather*}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d617fcb1",
+   "metadata": {},
+   "source": [
+    "\\begin{gather*}\n",
+    "2 = 1 + 1\\\\\n",
     "\\end{gather*}"
    ]
   }
