--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b1112b3a",
+   "id": "63a8edc5",
    "metadata": {},
    "outputs": [
     {
@@ -52,10 +52,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "b98bef16",
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 7,
+   "id": "70f53243",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "successfull\n"
+     ]
+    }
+   ],
    "source": [
     "x = 'success'\n",
     "y = 'full'\n",
@@ -65,8 +75,47 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "id": "d9830301",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (521683746.py, line 19)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[16], line 19\u001b[1;36m\u001b[0m\n\u001b[1;33m    print (xyz) print(\"!\")\u001b[0m\n\u001b[1;37m                ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = input('spell the first syllable of the word your teacher tells you ')\n",
+    "if x == 'beau':\n",
+    "    print('correct')\n",
+    "else:\n",
+    "    print('try again')\n",
+    "y = input('spell the second syllable of the word your teacher tells you ')\n",
+    "if y == 'ti':\n",
+    "    print('correct')\n",
+    "else:\n",
+    "    print('try again')\n",
+    "z = input('spell the third syllable of the word your teacher tells you ')\n",
+    "if z == 'full':\n",
+    "    print('correct')\n",
+    "else:\n",
+    "    print('try again')\n",
+    "    \n",
+    "print(\"well done\")\n",
+    "xyz = x + y + z\n",
+    "print (xyz)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "4ba80853",
+   "id": "8d9ba594",
    "metadata": {},
    "outputs": [],
    "source": []
